fixed scrollbars on Chrome

--- a/src/App.css
+++ b/src/App.css
@@ -499,3 +499,11 @@ body{
 .aboutLink{
   color: var(--offwhite);
 }
+
+html {
+  overflow: scroll;
+  overflow-x: hidden;
+}
+::-webkit-scrollbar {
+  width: 0px;  /* Remove scrollbar space */
+}
